--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+  <!--esto aumento el 22-03 prueba para json
+  <script type="text/javascript" src="showdata.js"></script>
+-->
+
 </head>
 
 <body>
@@ -54,7 +58,44 @@
         <div class="card-footer text-muted">
           <i>Duration time: the required to obtain the minimum initial amount necessary and to attract Partners and Investors.</i>
         </div>
+        <!-- esto aumento el 21-03-2020  10:30am -->
+        <!--
+        <form id="formPurchase">
+          <div class="form-group">
+            <input type="text" id="item" placeholder="item" class="form-control">
+          </div>
+          <div class="form-group">
+            <input type="text" id="userName" placeholder="userName" class="form-control">
+          </div>
+          <div class="form-group">
+            <input type="text" id="userCountry" placeholder="userCountry" class="form-control">
+          </div>
+          <div class="form-group">
+            <input type="number" id="userDiscount" placeholder="userDiscount" class="form-control">
+          </div>
+          <div class="form-group">
+            <input type="number" id="orderQty" placeholder="orderQty" class="form-control">
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">Save</button>
+        </form>
+
+          <div id="purchases">
+          </div>
+        -->
+          
       </div>
+
+      <!--Tabla prueba 22-03-2020
+      <div>
+        <table id="myData">
+          <tr>
+            <td>llave</td>
+            <td>valor</td>
+          </tr>
+        </table>
+      </div>
+    -->
+
 
       <!-- APPLICATION -->
       <!--
@@ -97,6 +138,9 @@
     
     <div id="app"></div>
     <script type="text/javascript" src="./build.js"></script>
+    <!--esto aumento el 21-03-2020
+    <script src="./main.js"></script>
+    -->
 <br>
 
 </body>
